# OOP-Cryptography-Project

./: .clang-format  .gitignore  .qmlls.ini  CMakeLists.txt  CMakePresets.json  README.md  deploy.ps1  deploy.sh  start_msvc_cmd.bat
scripts/: task  task.ps1
src/: Feistel.cpp  README.md  XOR.cpp  app.cpp  main.cpp
src/Components/: Main.qml  main.cpp  pages.qml
src/Components/app/: mainWindow.cpp  mainWindow.h
src/Components/buttons/: primaryButton.cpp  primaryButton.h
src/Components/pages/: encryptPage.cpp  encryptPage.h  homePage.cpp  homePage.h
src/Components/styles/: AppColors.h  AppFonts.h  AppStyles.h
src/algorithms/: Feistel.cpp  FeistelCipher.cpp  FeistelCipher.h  README.md  VigenereCipher.cpp  VigenereCipher.h  XOR.cpp  XOR.h  XorStreamCipher.cpp  XorStreamCipher.h  algorithmMain.cpp  functions.cpp
src/algorithms/helper/: makeCharToBitset.cpp  makeCharToBitset.h  makeStringToBinary.cpp  makeStringToBinary.h  makeStringToBinaryString.cpp  makeStringToBinaryString.h
src/core/: CipherFactory.cpp  CipherFactory.h  CryptoService.cpp  CryptoService.h  ICipher.h
src/domain/: CryptoModels.h  CryptoStep.h
src/helpers/: CryptoEngine.cpp  CryptoEngine.h
src/viewmodel/: CryptoViewModel.h
test/: CipherFactoryTest.cpp  CryptoEngineTest.cpp  CryptoServiceTest.cpp
testFolder/: testClass.cpp  testClass.h  testFile.cpp
